Add /me endpoint
